# linear-regression-from-scratch

./: README.md  flake.nix  pyproject.toml
docs/: 01_maths_and_theory.ipynb
src/: 01_maths_and_theory.ipynb  02_simple_linear_regression.ipynb  03_oop_linear_regression.ipynb
src/linear-regression-from-scratch/: __init__.py  base.py  models.py  preprocessing.py  solvers.py  utils.py
src/notebooks/: 03_oop_linear_regression.ipynb
src/tests/: conftest.py  demo.py
