[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "linear-regression-from-scratch"
version = "1.0.0"
description = "Linear regression (OLS, Ridge, Lasso) from scratch with NumPy."
requires-python = ">=3.10"
dependencies = ["numpy>=1.24"]

[project.optional-dependencies]
dev = ["pytest>=8.0", "scikit-learn>=1.3"]

[tool.hatch.build.targets.wheel]
packages = ["src/linear_regression_from_scratch"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
